@@ -2,15 +2,18 @@ solve.qr <- function(a, b, ...)
 {
     if( !is.qr(a) )
 	stop("this is the \"qr\" method for the generic function solve()")
-    nc <- ncol(a$qr)
+    nc <- ncol(a$qr); nr <- nrow(a$qr)
+    if( a$rank != min(nc, nr) )
     if( a$rank != nc )
 	stop("singular matrix 'a' in 'solve'")
     if( missing(b) ) {
-	if( nc != nrow(a$qr) )
+	if( nc != nr )
 	    stop("only square matrices can be inverted")
 	b <- diag(1, nc)
     }
-    return(qr.coef(a, b))
+    res <- qr.coef(a, b)
+    res[is.na(res)] <- 0
+    res
 }
 
 solve.default <-
@@ -74,14 +77,16 @@ qr.solve <- function(a, b, tol = 1e-7)
 {
     if( !is.qr(a) )
 	a <- qr(a, tol = tol)
-    nc <- ncol(a$qr)
-    if( a$rank != nc )
+    nc <- ncol(a$qr); nr <- nrow(a$qr)
+    if( a$rank != min(nc, nr) )
 	stop("singular matrix 'a' in solve")
     if( missing(b) ) {
-	if( nc != nrow(a$qr) )
+	if( nc != nr )
 	    stop("only square matrices can be inverted")
 	b <- diag(1, nc)
     }
-    return(qr.coef(a, b))
+    res <- qr.coef(a, b)
+    res[is.na(res)] <- 0
+    res
 }
 
