@@ -132,6 +132,21 @@ x <- qr.solve(h9, y, tol = 1e-10) # or equivalently :
 x <- qr.coef(qrh9, y) #-- is == but much better than
                       #-- solve(h9) \%*\% y
 h9 \%*\% x              # = y
+
+
+## overdetermined system
+A <- matrix(runif(12), 4)
+b <- 1:4
+qr.solve(A, b) # or solve(qr(A), b)
+solve(qr(A, LAPACK=TRUE), b)
+# this is a least-squares solution, cf. lm(b ~ 0 + A)
+
+## underdetermined system
+A <- matrix(runif(12), 3)
+b <- 1:3
+qr.solve(A, b)
+solve(qr(A, LAPACK=TRUE), b)
+# solutions will have one zero, not necessarily the same one
 }
 \keyword{algebra}
 \keyword{array}
